[ISSUE #5020] Optimize unit tests and code (#5023)